--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "node server.js",
     "test": "node ace test",
-    "dev": "webpack --mode development",
-    "prod": "webpack --mode production"
+    "dev": "cross-env NODE_ENV=development webpack --mode development --config webpack.config.js",
+    "prod": "cross-env NODE_ENV=production webpack --mode production --config webpack.config.js  "
   },
   "keywords": [
     "adonisjs",
@@ -28,6 +28,7 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
+    "prop-types": "^15.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hexgrid": "^1.0.3"
@@ -37,6 +38,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "babel-loader": "^8.2.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
