--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
+    "axios": "^0.21.1",
     "mysql": "^2.18.1",
     "prop-types": "^15.0.1",
     "react": "^17.0.1",
