--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "prop-types": "^15.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hexgrid": "^1.0.3"
+    "react-hexgrid": "^1.0.3",
+    "sharp": "^0.27.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
