--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hexgrid": "^1.0.3",
+    "react-keybind": "^0.8.1",
     "sharp": "^0.27.1"
   },
   "devDependencies": {
